feat(sidebar): added university information.

--- a/index.html
+++ b/index.html
@@ -110,6 +110,20 @@
           <li class="contact-item">
 
             <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <div class="contact-info">
+              <p class="contact-title">University</p>
+
+              <a href="https://www.skku.edu/" class="contact-link">Sungkyunkwan University</a>
+            </div>
+
+          </li>
+
+          <li class="contact-item">
+
+            <div class="icon-box">
               <ion-icon name="location-outline"></ion-icon>
             </div>
 
