feat(about): changed the "about me" page.

--- a/index.html
+++ b/index.html
@@ -211,17 +211,19 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            My name is Daniil Kim. I am a BSc student at Sungkyunkwan University (SKKU), South Korea. I am interested in the 
+            Cybersecurity and Compiler Design.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            My journey began with Delphi and Object Pascal. Later, I moved on to C, and eventually to full OOP languages, like C#. 
+            Currently I specialize in developing micro-services in Java, working with VertX, and various Java EE frameworks, 
+            specifically, I am currently working on a Quarkus-based project.
+          </p>
+
+          <p>
+            When I’m not coding, you can find me contributing to open-source projects. I also enjoy participating in various 
+            jams, such as  making simple games for Ludum Dare, or honing my cybersecurity skills with PicoCTF.
           </p>
         </section>
 
