feat, fix(navbar): fixed broken links, and restructured.

--- a/index.html
+++ b/index.html
@@ -176,11 +176,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Skills</button>
-          </li>
-
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Education</button>
+            <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
           <li class="navbar-item">
@@ -188,7 +184,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact Me</button>
+            <button class="navbar-link" data-nav-link>Contact</button>
           </li>
 
         </ul>
