feat(about): added "desktop application" section to "service"s.

--- a/index.html
+++ b/index.html
@@ -270,6 +270,22 @@
             <li class="service-item">
 
               <div class="service-icon-box">
+                <img src="./assets/images/icon-dev.svg" alt="Desktop development icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Desktop Application Development</h4>
+
+                <p class="service-item-text">
+                  Cross-platform desktop applications, written in Java and JavaFX.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
                 <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
               </div>
 
