feat, fix(resume): changed icon for "skills" and added "achievements".

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
+              <ion-icon name="code-slash-outline"></ion-icon>
             </div>
 
             <h3 class="h3">Skills</h3>
@@ -385,10 +385,10 @@
               <span>JavaEE, JakartaEE, VertX and Quarkus</span>
 
               <p class="timeline-text">
-                3+ years of experience writing highly performant backends in Java:
-                ●	3+ years in JavaEE and JakartaEE.
-                ●	2 years in VertX.
-                ●	1+ years in Quarkus.
+                3+ years of experience writing highly performant backends in Java: <br/>
+                ●	3+ years in JavaEE and JakartaEE. <br/>
+                ●	2 years in VertX. <br/>
+                ●	1+ years in Quarkus. <br/>
               </p>
 
             </li>
@@ -419,6 +419,30 @@
             </li>
 
           </ol>
+
+        </section>
+
+        <section class="service">
+
+          <h3 class="h3 service-title">Achievements</h3>
+
+          <ul class="service-list">
+
+            <li class="service-item">
+
+              <div class="service-icon-box"></div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">SKKU 5th Bug Bounty</h4>
+
+                <p class="service-item-text">
+                  2nd place.
+                </p>
+              </div>
+
+            </li>
+
+          </ul>
 
         </section>
 
