--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Frontend</h4>
+                <h4 class="h4 service-item-title">Frontend Development</h4>
 
                 <p class="service-item-text">
                   Modern frontend on Vue.
